[package]
name = "postfix-macros-impl"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]
repository = "https://github.com/est31/postfix-macros"
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Proc macro crate for postfix-macros"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
